--- a/parker/app/templates/register.html
+++ b/parker/app/templates/register.html
@@ -7,63 +7,58 @@
         <meta http-equiv = "X-UA-Compatible" content = "IE = edge">
         <meta name = "viewport" content = "width = device-width, initial-scale = 1">
         <!-- Bootstrap -->
-        <link href = "//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel = "stylesheet">
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
+        <!-- Custom styles for this template -->
+        {% load staticfiles %}
+        <link href="/static/signin.css" rel="stylesheet">
+
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
         <script src = "https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src = "https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        {% load static from staticfiles %}
-        <link href="{% static 'bootstrap/css/mycss.css' %}" rel="stylesheet" type="text/css">
+
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+
     </head>
     <body>
         <div class="container">
-          <form class="form-horizontal" action="signup" method="POST">
-            <div id="legend">
-              <legend class="">Register</legend>
+
+          <form class="form-signin" action="signup" method="POST">
+            <h2 class="form-signin-heading">Create New Account</h2>
+
+            <label for="first_name" class="sr-only">First Name</label>
+            <input type="text" id="first_name" class="form-control" placeholder="First Name" required autofocus>
+
+            <label for="last_name" class="sr-only">Last Name</label>
+            <input type="text" id="last_name" class="form-control" placeholder="Email address" required autofocus>
+
+            <label for="inputEmail" class="sr-only">Email address</label>
+            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+
+            <label for="username" class="sr-only">Email address</label>
+            <input type="email" id="username" class="form-control" placeholder="Username" required autofocus>
+
+            <label for="inputPassword" class="sr-only">Password</label>
+            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+
+            <label for="inputPassword" class="sr-only">Password</label>
+            <input type="password" id="confirmPassword" class="form-control" placeholder="Password" required>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" value="remember-me"> Remember me
+              </label>
             </div>
-
-              <label class="col-sm-4" for="first_name">First Name</label>
-              <div class="col-sm-8">
-                <input type="text" id="first_name" name="first_name" placeholder="" class="form-control input-lg">
-              </div>
-
-              <label class="col-sm-4" for="last_name">Last Name</label>
-              <div class="col-sm-8">
-                <input type="text" id="last_name" name="last_name" placeholder="" class="form-control input-lg">
-              </div>
-
-              <label class="col-sm-4" for="email">E-mail</label>
-              <div class="col-sm-8">
-                  <input type="email" id="email" name="email" placeholder="" class="form-control input-lg">
-              </div>
-
-              <label class="col-sm-4" for="username">Username</label>
-              <div class="col-sm-8">
-                <input type="text" id="username" name="username" placeholder="" class="form-control input-lg">
-              </div>
-
-              <label class="col-sm-4" for="password">Password</label>
-              <div class="col-sm-8">
-                <input type="password" id="password" name="password" placeholder="" class="form-control input-lg">
-              </div>
-
-              <label class="col-sm-4" for="password_confirm">Password (Confirm)</label>
-              <div class="col-sm-8">
-                <input type="password" id="password_confirm" name="password_confirm" placeholder="" class="form-control input-lg">
-              </div>
-
-              <!-- Button -->
-              <div class="form-group">
-                  <div class="col-sm-offset-4.col-sm-8">
-                    <button class="btn-primary">Register</button>
-                      {%csrf_token%}
-                  </div>
-              </div>
-        </form>
-
-        </div>
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src = "//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+          </form>
+        </div> <!-- /container -->
     </body>
 </html>
