--- a/parker/app/templates/register.html
+++ b/parker/app/templates/register.html
@@ -12,10 +12,12 @@
 
         <!-- Optional theme -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-
+        <!-- JQuery -->
+        <script   src="https://code.jquery.com/jquery-2.2.3.js"   integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4="   crossorigin="anonymous"></script>
         <!-- Custom styles for this template -->
         {% load staticfiles %}
-        <link href="/static/signin.css" rel="stylesheet">
+        <link href="{% static "css/signin.css" %}" rel="stylesheet">
+        <script src="{% static "js/functions.js" %}"></script>
 
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
@@ -27,36 +29,40 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
+        <!-- AngularJS -->
+        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+
 
     </head>
     <body>
-        <div class="container">
+        <div class="container" ng-app="myApp" ng-controller="myCtrl">
 
           <form class="form-signin" action="signup" method="POST">
             <h2 class="form-signin-heading">Create New Account</h2>
 
             <label for="first_name" class="sr-only">First Name</label>
-            <input type="text" id="first_name" class="form-control" placeholder="First Name" required autofocus>
+            <input name="first_name" type="text" id="first_name" class="form-control" placeholder="First Name" required autofocus>
 
             <label for="last_name" class="sr-only">Last Name</label>
-            <input type="text" id="last_name" class="form-control" placeholder="Email address" required autofocus>
+            <input name="last_name" type="text" id="last_name" class="form-control" placeholder="Email address" required autofocus>
 
             <label for="inputEmail" class="sr-only">Email address</label>
-            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+            <input name="email" type="text" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
 
             <label for="username" class="sr-only">Email address</label>
-            <input type="email" id="username" class="form-control" placeholder="Username" required autofocus>
+            <input name="username" type="text" id="username" class="form-control" placeholder="Username" required autofocus> <div>{{myusername}}</div>
 
             <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+            <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
 
             <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" id="confirmPassword" class="form-control" placeholder="Password" required>
+            <input type="password" id="confirmPassword" class="form-control" placeholder="Password" required onblur="validatePass('inputPassword','confirmPassword')"><div id="passError">   </div>
             <div class="checkbox">
               <label>
                 <input type="checkbox" value="remember-me"> Remember me
               </label>
             </div>
+            {% csrf_token %}
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
           </form>
         </div> <!-- /container -->
