--- a/parker/app/templates/register.html
+++ b/parker/app/templates/register.html
@@ -14,6 +14,8 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
         <!-- JQuery -->
         <script   src="https://code.jquery.com/jquery-2.2.3.js"   integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4="   crossorigin="anonymous"></script>
+        <!-- AngularJS -->
+        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
         <!-- Custom styles for this template -->
         {% load staticfiles %}
         <link href="{% static "css/signin.css" %}" rel="stylesheet">
@@ -29,13 +31,10 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
-        <!-- AngularJS -->
-        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-
 
     </head>
     <body>
-        <div class="container" ng-app="myApp" ng-controller="myCtrl">
+        <div id="signup_form" class="container" name="signup_form" ng-app="customersApp">
 
           <form class="form-signin" action="signup" method="POST">
             <h2 class="form-signin-heading">Create New Account</h2>
@@ -50,7 +49,8 @@
             <input name="email" type="text" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
 
             <label for="username" class="sr-only">Email address</label>
-            <input name="username" type="text" id="username" class="form-control" placeholder="Username" required autofocus> <div>{{myusername}}</div>
+            <input name="username" type="text" id="username" class="form-control" placeholder="Username" required autofocus  data-ng-model="form.username" data-wc-unique="{key: customer.id, property: 'email'}">
+            <small class="error" ng-show="signup_form.username.$unique">That username is taken, please try another</small>
 
             <label for="inputPassword" class="sr-only">Password</label>
             <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
