Some angular fixes

--- a/parker/app/static/css/signin.css
+++ b/parker/app/static/css/signin.css
@@ -33,11 +33,16 @@ body {
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
+.form-signin input[type="email"] {
+  margin-bottom: 10px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
 .form-signin input[type="password"] {
   margin-bottom: 10px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
-#passError {
+.myerrorclass{
     color: red;
 }
