--- a/parker/app/templates/register.html
+++ b/parker/app/templates/register.html
@@ -43,20 +43,20 @@
             <input name="first_name" type="text" id="first_name" class="form-control" placeholder="First Name" required autofocus>
 
             <label for="last_name" class="sr-only">Last Name</label>
-            <input name="last_name" type="text" id="last_name" class="form-control" placeholder="Email address" required autofocus>
+            <input name="last_name" type="text" id="last_name" class="form-control" placeholder="Last Name" required autofocus>
 
             <label for="inputEmail" class="sr-only">Email address</label>
-            <input name="email" type="text" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+            <input name="email" type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
 
             <label for="username" class="sr-only">Email address</label>
-            <input name="username" type="text" id="username" class="form-control" placeholder="Username" required autofocus  data-ng-model="form.username" data-wc-unique="{key: customer.id, property: 'email'}">
-            <small class="error" ng-show="signup_form.username.$unique">That username is taken, please try another</small>
+            <input name="username" type="text" id="username" class="form-control" placeholder="Username" required autofocus  data-ng-model="form.username" data-wc-unique="{key: customer.id, property: 'email'}"> <div id="usernameTakenMessage" class="myerrorclass"></div>
+            <!--<small class="error" ng-show="signup_form.username.$unique">That username is taken, please try another</small> -->
 
             <label for="inputPassword" class="sr-only">Password</label>
             <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
 
-            <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" id="confirmPassword" class="form-control" placeholder="Password" required onblur="validatePass('inputPassword','confirmPassword')"><div id="passError">   </div>
+            <label for="confirmPassword" class="sr-only">Password</label>
+            <input type="password" id="confirmPassword" class="form-control" placeholder="Password" required onblur="validatePass('inputPassword','confirmPassword')"><div id="passError" class="myerrorclass">   </div>
             <div class="checkbox">
               <label>
                 <input type="checkbox" value="remember-me"> Remember me
