--- a/parker/app/templates/layout.html
+++ b/parker/app/templates/layout.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>{{title}}</title>
     <meta charset = "utf-8">
     <meta http-equiv = "X-UA-Compatible" content = "IE = edge">
     <meta name = "viewport" content = "width = device-width, initial-scale = 1">
@@ -31,29 +31,57 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
 </head>
 <body>
-    <div class="container">
+<div class="container">
+    <nav class="navbar navbar-default navbar-static-top">
+        <div>
+        {% if user.first_name%}
+            <div class="col-sm-2">
+                <a class="navbar-brand" href="<?php bloginfo( 'url' ); ?>"><img class="img-responsive2" src="{% static "img/icon.png" %}"></a>
+            </div>
+            <div class="col-sm-6">
+            </div>
+            <div class="col-sm-4">
+                <div class="col-sm-7">
+                    <span class="navbar-text">Welcome back {{user.first_name}}!</span>
+                </div>
+                <div class="col-sm-5">
+                    <a class="navbar-brand" href="signout">Log out</a>
+                </div>
+            </div>
+
+
+        {%else %}
+            <div>
+                <div class="col-sm-2">
+                    <a class="navbar-brand" href="<?php bloginfo( 'url' ); ?>"><img class="img-responsive2" src="{% static "img/icon.png" %}"></a>
+                </div>
+                <div class="col-sm-5">
+                </div>
+                <div class="col-sm-5">
+                    <form class="navbar-form" action="signin" method="POST">
+                        <label for="username" class="sr-only">Username</label>
+                        <input name="username" type="text" id="username" class="form-group" placeholder="username" required autofocus>
+                        <label for="password" class="sr-only">Password</label>
+                        <input name="password" type="password" id="password" class="form-group" placeholder="Password" required>
+                        {% csrf_token %}
+                        <button class="btn btn-default" type="submit">Log in</button>
+                    </form>
+                </div>
+            </div>
+
+
+        {% endif%}
+         </div>
+    </nav>
+    <div class="row">
         <div class="jumbotron">
-            <div id="signup_form" class="container" name="signup_form" ng-app="customersApp">
+          <h1>Welcome to Parker.io</h1>
 
-              <form class="form-signin" action="signin" method="POST">
-                <!-- <h2 class="form-signin-heading">Create New Account</h2> -->
-                  {%if wrong_credentials %}
-                    <p class = "myerrorclass"> Wrong credentials please try again!</p>
-                  {% endif %}
-                {% csrf_token %}
-                  <label for="username" class="sr-only">Username</label>
-                  <input name="username" type="text" id="username" class="form-control" placeholder="username" required autofocus>
-
-                  <label for="password" class="sr-only">Password</label>
-                  <input name="password" type="password" id="password" class="form-control" placeholder="Password" required>
-                  <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
-              </form>
-            </div> <!-- /container -->
+          <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
         </div>
-    </div>
-
+     </div>
+</div>
 </body>
 </html>
